@@ -1,0 +1,33 @@
+;;; eshell-extras.el --- Extra commands for EShell   -*- lexical-binding: t; -*-
+
+;; Copyright (C) 2025  Zhengyi Fu
+
+;; Author: Zhengyi Fu <i@fuzy.me>
+;; Keywords: tools
+
+;; This program is free software; you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation, either version 3 of the License, or
+;; (at your option) any later version.
+
+;; This program is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+;;; Commentary:
+
+;;
+
+;;; Code:
+
+(require 'em-unix)
+
+(defun eshell/rg (&rest args)
+  (eshell-grep "rg" args t))
+
+(provide 'eshell-extras)
+;;; eshell-extras.el ends here
